crates/tui/src/turn/snapshots/tui__turn__answers__tests__card_with_you_answered_at_30.snap
---
source: crates/tui/src/turn/answers_tests.rs
expression: answered_screen(30)
---
                      ▄▄▄▄▄▄▄
                       pick ▐
                      ▀▀▀▀▀▀▀
                        00:00
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
• Asked 2 questions · 4s
you answered
Base: main (Recommended),
dev, "and tags"
Name: skipped
note: "by friday"
Thanks.
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ › █
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
